[project]
name = "gnssir-rt"
version = "1.1.0"
description = "processing tools for GNSS-IR water level monitoring"
authors = [
    { name = "David Purnell", email = "davejpurnell@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "astropy",
    "hydra-core",
    "matplotlib",
    "numpy",
    "scipy",
    "zenodo-get",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
gnssir = "gnssir.main_cl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gnssir"]